--- a/app/src/main/res/layout/travel_list_item.xml
+++ b/app/src/main/res/layout/travel_list_item.xml
@@ -5,13 +5,14 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="15dp"
     android:layout_marginLeft="13dp"
-    android:layout_marginRight="13dp">
+    android:layout_marginRight="13dp"
+   >
     <FrameLayout android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
             android:weightSum="1"
            >
@@ -25,7 +26,7 @@
     <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textSize="25sp"
+    android:textSize="20sp"
     android:text="title"
     android:id="@+id/tv_title"
         android:textColor="@color/primary_text_default_material_light" />
@@ -44,13 +45,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="距离"
-        android:id="@+id/tv_dist"
+
         android:textSize="10sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="距离"
-            android:textSize="25sp"
+            android:textSize="20sp"
+            android:id="@+id/tv_dist"
             android:textColor="@color/primary_text_default_material_light"/>
 
     </LinearLayout>
@@ -59,7 +61,7 @@
         android:layout_height="wrap_content"
         android:text="2016.1.1"
         android:id="@+id/tv_date_start"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textColor="@color/primary_text_default_material_light"/>
     <TextView
         android:layout_width="wrap_content"
@@ -70,19 +72,21 @@
         android:layout_height="wrap_content"
         android:text="2016.1.1"
         android:id="@+id/tv_date_end"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textColor="@color/primary_text_default_material_light"/>
 </LinearLayout>
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.5"
+                android:id="@+id/img_head"
+                android:clickable="true"
                 android:src="@drawable/ic_account_circle_blue_grey_400_36dp"
                 />
         </LinearLayout>
         <LinearLayout
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@drawable/circle_layout"
             android:layout_gravity="center"
             android:gravity="center"
@@ -92,7 +96,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
-                android:text="99"/>
+                android:text="99"
+                android:id="@+id/tv_match_degree"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -102,7 +107,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:button="@drawable/selector_checkbox"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:id="@+id/cb_like"/>
 
         </LinearLayout>
     </FrameLayout>
